test/MapperTestLibrary1/Error/ConstructorMatchFailedMap1.cs
// <Auto-Generated/>

#if !NO_BUILD_ERROR_CODE

using LightweightObjectMapper;

namespace MapperTestLibrary;

internal class ConstructorMatchFailedMapClass1
{
    public int MyProperty { get; set; }
}

internal class ConstructorMatchFailedMapClass2
{
    public int MyProperty { get; set; }

    public ConstructorMatchFailedMapClass2(int value)
    {
        MyProperty = value;
    }
}

file class Extensions
{
    public Extensions()
    {
        new ConstructorMatchFailedMapClass1().MapTo<ConstructorMatchFailedMapClass2>();
        new ConstructorMatchFailedMapClass2().MapTo<ConstructorMatchFailedMapClass2>();
    }
}

#endif
